substrate/frame/support/test/tests/construct_runtime_v2_ui/missing_runtime_types_derive.rs
#[frame_support::construct_runtime_v2]
mod runtime {
    #[frame::runtime]
    pub struct Runtime;

    #[frame::pallets]
    pub struct Pallets {}
}

fn main() {}
